Make drag-and-drop work with OOPIF-WebView.

This patch adds support for drag-and-drop to/from/over OOPIF-based WebViews.

BUG=617728

Review-Url: https://codereview.chromium.org/2626073007
Cr-Commit-Position: refs/heads/master@{#444801}

Former-commit-id: 113278e435c9470189456ad501a63238cec65570